# trove-vlc-plugin

./: .clang-format  .gitignore  CMakeLists.txt  mct_project_info.json  vlc-help-complete.txt
src/cpp/: CMakeLists.txt  app_globals.h  cli_main.cpp  fs.h  gfx_headers.h  globals.h  logging.cpp  logging.h  main.cpp
src/cpp/UI/: CMakeLists.txt  SubWindowHandler.h  menubar.cpp  menubar.h  ui_globals.h
src/cpp/UI/base/: CMakeLists.txt  fragment.cpp  fragment.h
src/cpp/UI/dialogs/: CMakeLists.txt  MediaSourcesDialog.cpp  MediaSourcesDialog.h
src/cpp/UI/main_window/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main_window.cpp  main_window.h
src/cpp/UI/menubar/: CMakeLists.txt  menubar.cpp  menubar.h
src/cpp/UI/views/: MovieView.cpp  MovieView.h
src/cpp/app/: CMakeLists.txt  app_globals.h  main.cpp
src/cpp/app/ui/: SubWindowHandler.cpp  SubWindowHandler.h  ui_globals.h
src/cpp/app/ui/base/: fragment.cpp  fragment.h
src/cpp/app/ui/dialogs/: MediaSourcesDialog.cpp  MediaSourcesDialog.h
src/cpp/app/ui/main_window/: MainWindow.cpp  MainWindow.h
src/cpp/app/ui/menubar/: CMakeLists.txt  menubar.cpp  menubar.h
src/cpp/app/ui/views/: CMakeLists.txt  DatabaseView.cpp  DatabaseView.h  LoggerView.cpp  LoggerView.h  MovieView.h
src/cpp/assets/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  asset_globals.h
src/cpp/assets/asset_wrappers/: CMakeLists.txt  SDL_Texture_wrapper.cpp  SDL_Texture_wrapper.h
src/cpp/cli/: CMakeLists.txt  cli_args.cpp  cli_args.h  cli_main.cpp
src/cpp/core/: CMakeLists.txt  globals.h  logging.cpp  logging.h
src/cpp/core/assets/: AssetManager.cpp  AssetManager.h
src/cpp/core/assets/asset_wrappers/: CMakeLists.txt
src/cpp/core/media_source/: CMakeLists.txt  MediaSourceManager.h
src/cpp/core/media_source/source_types/: FileSource.cpp  FileSource.h  SourceBase.h
src/cpp/core/scripting/: lua_utils.cpp
src/cpp/core/scripting/extensions/: CMakeLists.txt  lua_config_access.cpp  lua_json.cpp  lua_regex.cpp  lua_web_requests.cpp
src/cpp/core/scripting/extensions/lua_cjson/: lua_cjson.c
src/cpp/core/scripting/script_types/: MovieParserScript.cpp  MovieParserScript.h  MovieScraperScript.cpp  MovieScraperScript.h  ScriptBase.cpp  ScriptBase.h  TvShowParserScript.h  TvShowScraperScript.cpp  TvShowScraperScript.h
src/cpp/core/settings/: root_settings.cpp  root_settings.h
src/cpp/database/: CMakeLists.txt
src/cpp/media_source/: CMakeLists.txt  FileSource.cpp  MediaSourceManager.cpp  MediaSourceManager.h  SourceBase.cpp  SourceBase.h  file_source.cpp  file_source.h  serialize.cpp  serialize.h  source_base.cpp  source_base.h  source_globals.h
src/cpp/media_source/source_types/: CMakeLists.txt  FileSource.cpp  FileSource.h  SourceBase.cpp  SourceBase.h
src/cpp/ns_abbr/: CMakeLists.txt
src/cpp/scripting/: CMakeLists.txt  MovieScraperScript.cpp  MovieScraperScript.h  lua_utils.cpp  lua_utils.h  scraper_script.cpp  scraper_script.h
src/cpp/scripting/extensions/: CMakeLists.txt  lua_config_access.cpp  lua_config_access.h  lua_json.cpp  lua_json.h  lua_log.cpp  lua_log.h  lua_regex.cpp  lua_regex.h  lua_web_requests.cpp  lua_web_requests.h
src/cpp/scripting/extensions/lua_cjson/: CMakeLists.txt  lua_cjson.h
src/cpp/scripting/script_types/: CMakeLists.txt  MovieParserScript.cpp  MovieParserScript.h  MovieScraperScript.cpp  MovieScraperScript.h  ScriptBase.cpp  ScriptBase.h  TvShowParserScript.cpp  TvShowParserScript.h  TvShowScraperScript.cpp  TvShowScraperScript.h
src/cpp/settings/: CMakeLists.txt  root_settings.cpp  root_settings.h  settings_globals.h
src/lua/: test.lua  tmdb_movie.lua
src/lua/movie_parsers/: movie_dir_parser.lua  movie_parser.lua  movie_parser_test.lua  tmdb_movie_dir_parser.lua
src/lua/movie_scrapers/: tmdb_movie.lua  tmdb_movie_scraper.lua
src/lua/tv_parsers/: tmdb_tv_dir_parser.lua
src/lua/tv_scrapers/: tmdb_tv_scraper.lua
src/vlc_lua/extensions/: trove_extension.lua
src/vlc_lua/modules/: trove_settings.lua  trove_utils.lua
src/vlc_lua/sd/: trove_library.lua
